--- a/src/app/modules/admin/containers/create-comparative-reports/create-comparative-reports.component.scss
+++ b/src/app/modules/admin/containers/create-comparative-reports/create-comparative-reports.component.scss
@@ -106,23 +106,38 @@
     letter-spacing: 0.25px;
   }
 }
+.select-item__option {
+  flex-direction: row-reverse;
+}
 .select-item__checkbox {
   position: relative;
   float: right;
+  .select-item__input-checkbox {
+    position: relative;
+    z-index: 2;
+  }
+  .select-item__input-cover {
+    width: 20px;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 10;
+  }
 }
-::ng-deep .mat-select-ejes:focus {
-  border: 2px solid #1967d2;
+
+::ng-deep .mat-option-text {
+  width: 87%;
+  position: relative;
 }
-.mat-pseudo-checkbox-checke {
-  top: 2.4px;
-  left: 1px;
-  width: 8px;
-  height: 3px;
-  border-left: 2px solid currentColor;
-  transform: rotate(-45deg);
-  opacity: 1;
-  box-sizing: content-box;
+::ng-deep .mat-select-panel .mat-option.mat-selected {
+  background: white;
 }
+::ng-deep .mat-select-panel {
+  background: #95b7ea;
+  margin-top: 40px;
+}
+
 .select-item--variables {
   margin-top: 200px;
   margin-bottom: 180px;
