--- a/src/app/modules/admin/containers/reports/reports.component.html
+++ b/src/app/modules/admin/containers/reports/reports.component.html
@@ -1,165 +1,261 @@
 <section class="container-reports">
-    <div class="reports">
-        <h1 class="reports__title">Reportes Enviados</h1>
-        <div class="reports__container-search">
-            <a class="btn-add-reports" style="cursor: pointer" (click)="create()">
-                <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor"
-                    class="bi bi-layout-text-sidebar-reverse btn-add-reports__ico " viewBox="0 0 16 16">
-                    <path
-                        d="M12.5 3a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1h5zm0 3a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1h5zm.5 3.5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h5a.5.5 0 0 0 .5-.5zm-.5 2.5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1h5z" />
-                    <path
-                        d="M16 2a2 2 0 0 0-2-2H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2zM4 1v14H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h2zm1 0h9a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H5V1z" />
-                </svg>
-                <span class="btn-add-reports__text"> CREAR REPORTE </span>
+  <div class="reports">
+    <h1 class="reports__title">Reportes Enviados</h1>
+    <div class="reports__container-search">
+      <a class="btn-add-reports" style="cursor: pointer" (click)="create()">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="19"
+          height="19"
+          fill="currentColor"
+          class="bi bi-layout-text-sidebar-reverse btn-add-reports__ico"
+          viewBox="0 0 16 16"
+        >
+          <path
+            d="M12.5 3a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1h5zm0 3a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1h5zm.5 3.5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h5a.5.5 0 0 0 .5-.5zm-.5 2.5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1h5z"
+          />
+          <path
+            d="M16 2a2 2 0 0 0-2-2H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2zM4 1v14H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h2zm1 0h9a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H5V1z"
+          />
+        </svg>
+        <span class="btn-add-reports__text"> CREAR REPORTE </span>
+      </a>
+      <label for="searchAxes" class="lbl-search-reports">
+        <input
+          class="lbl-search-reports__input"
+          id="searchAxes"
+          type="text"
+          [(ngModel)]="nombre"
+          (ngModelChange)="busca($event)"
+          autocomplete="off"
+          spellcheck="false"
+        />
+        <img
+          class="lbl-search-reports__ico"
+          src="../../../../../assets/icons/Search.svg"
+          alt="Icono de lupa para busqueda"
+        />
+      </label>
+    </div>
+    <section class="list-reports">
+      <div class="list-reports__table">
+        <!-- Position Column -->
+        <div class="list-reports__row">
+          <div class="list-reports__header">Numero</div>
+          <div class="list-reports__header">Fecha de creacion</div>
+          <div class="list-reports__header list-reports__header--action">
+            Acciones
+          </div>
+        </div>
+
+        <div
+          class="list-reports__row"
+          *ngFor="let element of this.listOfReport_toShow | async"
+        >
+          <div class="list-reports__cell list-reports__cell--reports">
+            {{ element.nombre }}
+          </div>
+          <div class="list-reports__cell list-reports__cell--reports">
+            {{ element.fechaCreacion | date: "dd/MM/yyyy" }}
+          </div>
+          <div class="list-reports__cell list-reports__cell--acction">
+            <a (click)="showModal(element)">
+              <img
+                class="list-reports__ico-action"
+                src="../../../../../assets/icons/arrows-angle-expand.svg"
+                matTooltip="Vizualizar"
+              />
             </a>
-            <label for="searchAxes" class="lbl-search-reports">
-                <input class="lbl-search-reports__input" id="searchAxes" type="text" [(ngModel)]="nombre"
-                    (ngModelChange)="busca($event)" autocomplete="off" spellcheck="false" />
-                <img class="lbl-search-reports__ico" src="../../../../../assets/icons/Search.svg"
-                    alt="Icono de lupa para busqueda" />
-            </label>
+            <a (click)="edit(element)">
+              <img
+                class="list-reports__ico-action list-reports__ico-action--edit"
+                src="../../../../../assets/icons/Pencil.svg"
+                alt="Icono de editar"
+                matTooltip="Editar"
+              />
+            </a>
+            <a (click)="duplicated(element)">
+              <img
+                class="list-reports__ico-action"
+                src="../../../../../assets/icons/bookmarks.svg"
+                alt="Icono de duplicar"
+                matTooltip="Duplicar"
+              />
+            </a>
+            <img
+              class="list-reports__ico-action"
+              src="../../../../../assets/icons/Trash.svg"
+              alt="icono de Eliminar"
+              matTooltip="Borrar"
+              (click)="onClickDelete(element.id)"
+            />
+          </div>
         </div>
-        <section class="list-reports">
-            <div class="list-reports__table">
-                <!-- Position Column -->
-                <div class="list-reports__row">
-                    <div class="list-reports__header">Numero</div>
-                    <div class="list-reports__header">Fecha de creacion</div>
-                    <div class="list-reports__header list-reports__header--action">
-                        Acciones
-                    </div>
-                </div>
+      </div>
+      <div class="pagination">
+        <p class="pagination-text">
+          {{ initialItem }} - {{ finalItem }} de {{ listLenght }}
+        </p>
+        <svg
+          (click)="onClickBefore()"
+          class="pagination-arrow"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M14 7L9 12L14 17V7Z"
+            fill="black"
+            fill-opacity="0.87"
+          />
+        </svg>
+        <svg
+          (click)="onClickAfter()"
+          class="pagination-arrow"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M10 7L15 12L10 17V7Z"
+            fill="black"
+            fill-opacity="0.87"
+          />
+        </svg>
+      </div>
+    </section>
+  </div>
 
-                <div class="list-reports__row" *ngFor="let element of reports">
-                    <div class="list-reports__cell list-reports__cell--reports">
-                        {{ element.nombre}}
-                    </div>
-                    <div class="list-reports__cell list-reports__cell--reports ">
-                        {{ element.fechaCreacion | date: 'dd/MM/yyyy'}}
-                    </div>
-                    <div class="list-reports__cell list-reports__cell--acction">
-                        <a (click)="showModal(element)">
-                            <img class="list-reports__ico-action"
-                                src="../../../../../assets/icons/arrows-angle-expand.svg" matTooltip="Vizualizar" />
-                        </a>
-                        <a (click)="edit(element)">
-                            <img class="list-reports__ico-action list-reports__ico-action--edit"
-                                src="../../../../../assets/icons/Pencil.svg" alt="Icono de editar"
-                                matTooltip="Editar" />
-                        </a>
-                        <a (click)="duplicated(element)">
-                            <img class="list-reports__ico-action" src="../../../../../assets/icons/bookmarks.svg"
-                                alt="Icono de duplicar" matTooltip="Duplicar" />
-                        </a>
-                        <img class="list-reports__ico-action" src="../../../../../assets/icons/Trash.svg"
-                            alt="icono de Eliminar" matTooltip="Borrar" (click)="onClickDelete(element.id)" />
-                    </div>
-                </div>
-            </div>
-            <div class="pagination">
-                <p class="pagination-text">
-                    {{ initialItem }} - {{ finalItem }} de {{ listLenght }}
-                </p>
-                <svg (click)="onClickBefore()" class="pagination-arrow" width="24" height="24" viewBox="0 0 24 24"
-                    fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M14 7L9 12L14 17V7Z" fill="black"
-                        fill-opacity="0.87" />
-                </svg>
-                <svg (click)="onClickAfter()" class="pagination-arrow" width="24" height="24" viewBox="0 0 24 24"
-                    fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M10 7L15 12L10 17V7Z" fill="black"
-                        fill-opacity="0.87" />
-                </svg>
-            </div>
-        </section>
+  <div *ngIf="flagNew" class="modal">
+    <img
+      class="modal__btnClose"
+      (click)="close()"
+      src="../../../../../assets/icons/X.svg"
+      alt="icono de cerrar"
+    />
+    <div class="modal__container">
+      <img
+        class="modal__ico"
+        src="../../../../../assets/icons/Check.svg"
+        alt="icon check"
+      />
+      <div>
+        <p class="modal__text">
+          ¡Reporte Creado con éxito y enviado correctamente a los Centros
+          Asignados!
+        </p>
+        <p class="modal__text" style="padding-top: 70px">
+          Cierra para regresar al Home
+        </p>
+      </div>
     </div>
+  </div>
 
-    <div *ngIf="flagNew" class="modal">
-        <img class="modal__btnClose" (click)="close()" src="../../../../../assets/icons/X.svg" alt="icono de cerrar" />
-        <div class="modal__container">
-            <img class="modal__ico" src="../../../../../assets/icons/Check.svg" alt="icon check" />
-            <div>
-                <p class="modal__text">
-                    ¡Reporte Creado con éxito y enviado correctamente a los Centros Asignados!
-                </p>
-                <p class="modal__text" style="padding-top: 70px;"> Cierra para regresar al Home</p>
-            </div>
-
-        </div>
+  <div *ngIf="flagEdited" class="modal">
+    <img
+      class="modal__btnClose"
+      (click)="close()"
+      src="../../../../../assets/icons/X.svg"
+      alt="icono de cerrar"
+    />
+    <div class="modal__container">
+      <img
+        class="modal__ico"
+        src="../../../../../assets/icons/Check.svg"
+        alt="icon check"
+      />
+      <p class="modal__text">
+        ¡Reporte Editado con éxito y enviado correctamente a los Centros
+        Asignados!
+      </p>
     </div>
+  </div>
 
-    <div *ngIf="flagEdited" class="modal">
-        <img class="modal__btnClose" (click)="close()" src="../../../../../assets/icons/X.svg" alt="icono de cerrar" />
-        <div class="modal__container">
-            <img class="modal__ico" src="../../../../../assets/icons/Check.svg" alt="icon check" />
-            <p class="modal__text">
-                ¡Reporte Editado con éxito y enviado correctamente a los Centros Asignados!
-            </p>
-        </div>
+  <div *ngIf="flagDelete" class="modal-delete">
+    <div class="modal__container-delete">
+      <img
+        class="modal__ico-info"
+        src="../../../../../assets/icons/Exclamation-triangle.svg"
+        alt="Icono de información"
+      />
+      <p class="modal__text">
+        ¡Estas a punto de eliminar este dato!<br />Esta acción no podrá ser
+        revertida
+      </p>
     </div>
-
-    <div *ngIf="flagDelete" class="modal-delete">
-        <div class="modal__container-delete">
-            <img class="modal__ico-info" src="../../../../../assets/icons/Exclamation-triangle.svg"
-                alt="Icono de información" />
-            <p class="modal__text">
-                ¡Estas a punto de eliminar este dato!<br />Esta acción no podrá ser
-                revertida
-            </p>
-        </div>
-        <div class="modal__options">
-            <button class="btn-modal__cancel" (click)="close()">Cancelar</button>
-            <button class="btn-modal__accept" (click)="deleteReport()">
-                Confirmar y eliminar
-            </button>
-        </div>
+    <div class="modal__options">
+      <button class="btn-modal__cancel" (click)="close()">Cancelar</button>
+      <button class="btn-modal__accept" (click)="deleteReport()">
+        Confirmar y eliminar
+      </button>
     </div>
-    
+  </div>
 </section>
-<div class="container-preview modal-2"*ngIf="showIt">
-        
-    <div class="container-preview-reporte">
-        <section class="container-header-preview">
-            <div class="logo-mdp">
-                <img src="/assets/images/logo-MDP.png" alt="logo-MDP" style="width: 113px;
-        height: 49px;">
-            </div>
-            <label class="label-repor-name">Reporte {{report.nombre}} </label>
-            <div class="periodo">
-                <p>Periodo</p>
-                <label>{{report.periodoDesde | date: 'dd/MM/yyyy'}} A {{report.periodoHasta|date: 'dd/MM/yyyy'}}</label>
-            </div>
-        </section>
-        <section class="container-centros-preview ">
-            <div class="centros-Alcanzados">
-                <p>Centros Alcanzados:</p>
-                <p class="label-centros" *ngFor="let item of centerSelects">{{item}}</p>
-            </div>
-            <div class="fecha-entrega">
-                <label style="display: flex; margin-top: 4px;">Fecha de Entrega (Alerta) 
-                    <mat-icon style="color:#FFBD12 ; font-size: 16px ;">notification_important</mat-icon>
-                </label>
-                <p>{{report.fechaEntrega | date: 'dd/MM/yyyy'}}</p>
-            </div>
-        </section>
-        <section class="section-ejes-variables">
-            <div class="container-ejes-variables" *ngFor="let item of axesSelects">
-                <label class="ejes-preview">{{item}}</label>
-                <div class="variables-preview">
-                    <div style="margin-top: 12px;"  *ngFor="let variable of variablesSelects" >
-                        <span *ngIf="item === variable.eje.nombre" class="p-variables">{{variable.nombre}}</span>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section style="border-top: 2px solid  #D9D9D9; margin-top: 20px ;">
-            <div class="buttons">
-                <button (click)="closeModal()" class="button" mat-button>Cerrar</button> 
-            </div>
-        </section>
-    </div>
-    <div *ngIf="flag" class="overlay"></div>
-
-    
+<div class="container-preview modal-2" *ngIf="showIt">
+  <div class="container-preview-reporte">
+    <section class="container-header-preview">
+      <div class="logo-mdp">
+        <img
+          src="/assets/images/logo-MDP.png"
+          alt="logo-MDP"
+          style="width: 113px; height: 49px"
+        />
+      </div>
+      <label class="label-repor-name">Reporte {{ report.nombre }} </label>
+      <div class="periodo">
+        <p>Periodo</p>
+        <label
+          >{{ report.periodoDesde | date: "dd/MM/yyyy" }} A
+          {{ report.periodoHasta | date: "dd/MM/yyyy" }}</label
+        >
+      </div>
+    </section>
+    <section class="container-centros-preview">
+      <div class="centros-Alcanzados">
+        <p>Centros Alcanzados:</p>
+        <p class="label-centros" *ngFor="let item of centerSelects">
+          {{ item }}
+        </p>
+      </div>
+      <div class="fecha-entrega">
+        <label style="display: flex; margin-top: 4px"
+          >Fecha de Entrega (Alerta)
+          <mat-icon style="color: #ffbd12; font-size: 16px"
+            >notification_important</mat-icon
+          >
+        </label>
+        <p>{{ report.fechaEntrega | date: "dd/MM/yyyy" }}</p>
+      </div>
+    </section>
+    <section class="section-ejes-variables">
+      <div class="container-ejes-variables" *ngFor="let item of axesSelects">
+        <label class="ejes-preview">{{ item }}</label>
+        <div class="variables-preview">
+          <div
+            style="margin-top: 12px"
+            *ngFor="let variable of variablesSelects"
+          >
+            <span *ngIf="item === variable.eje.nombre" class="p-variables">{{
+              variable.nombre
+            }}</span>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section style="border-top: 2px solid #d9d9d9; margin-top: 20px">
+      <div class="buttons">
+        <button (click)="closeModal()" class="button" mat-button>Cerrar</button>
+      </div>
+    </section>
+  </div>
+  <div *ngIf="flag" class="overlay"></div>
 </div>
 <div *ngIf="showIt" class="overlay"></div>
