Feat: agrega funciones get y dates

--- a/src/app/modules/admin/containers/received-report/received-report.component.html
+++ b/src/app/modules/admin/containers/received-report/received-report.component.html
@@ -25,7 +25,7 @@
             </div>
             <div class="fecha-entrega">
                 <label style="display: flex; margin-top: 4px;">Fecha de recepcion: <span
-                        style="color: #083D5E; margin-left: 5px;"> {{dateComplete()}}</span></label>
+                        style="color: #083D5E; margin-left: 5px;"> {{dates()}}</span></label>
             </div>
         </section>
         <section class="section-ejes-variables">
