--- a/src/app/modules/admin/containers/variables-show/variables-show.component.html
+++ b/src/app/modules/admin/containers/variables-show/variables-show.component.html
@@ -1,8 +1,8 @@
-<div >
+<div>
     <div class="container-variablesShow">
         <p class="nameVariable">{{indexAlphabet}} {{variableValue.nombre}}</p>
         <p *ngIf="variableValue.tipo === 'Numérico' && variableValue.genero === 'false'" class="typeOfResponce">{{variableValue.valor_final}}</p>
-        <div style="margin-left: 5px;" *ngIf="variableValue.tipo === 'Textual'">
+        <div style="margin-left: 10px;" *ngIf="variableValue.tipo === 'Textual'">
             <p>{{responseToShow.textual}}</p>
             <label *ngIf="variableValue.escala_valor == 'true'" style="position: absolute;">Escala de valor:</label>
             <div class="container-escala" *ngIf="variableValue.escala_valor == 'true'">
@@ -17,13 +17,13 @@
                 <label>{{variableValue.etiqueta_final}}</label>
             </div>
         </div>
-        <div *ngIf="variableValue.genero == 'true' && variableValue.id == responseToShow.idVariable">
+        <div style="margin-left: 10px;" *ngIf="variableValue.genero == 'true' && variableValue.id == responseToShow.idVariable">
             <span style="margin-right: 36px;">Femenino: {{responseToShow.femenino}}</span>
             <span style="margin-right: 36px;">Masculino: {{responseToShow.masculino}}</span>
             <span style="margin-right: 36px;">No Binario: {{responseToShow.noBinario}}</span>
             <span style="margin-right: 36px;">Total: {{total()}}</span>
         </div>
-        <span *ngIf="responseToShow.observaciones">Observaciones: {{responseToShow.observaciones}}</span>
+        <p style="margin-top: 15px; margin-left: 10px;" *ngIf="responseToShow.observaciones">Observaciones: {{responseToShow.observaciones}}</p>
     </div>
     <div class="border" *ngIf="index< leng-1" ></div>
 </div>
