--- a/src/app/modules/admin/containers/variables-show/variables-show.component.scss
+++ b/src/app/modules/admin/containers/variables-show/variables-show.component.scss
@@ -23,7 +23,7 @@
         font-family: 'Futura Bk BT';
         font-style: italic;
         font-weight: 400;
-        font-size: 14px;
+        font-size: 17px;
         line-height: 17px;
         /* identical to box height */
         color: #083D5E;
@@ -39,7 +39,7 @@
         font-style: normal;
         font-weight: 400;
         font-size: 12px;
-        line-height: 14px;
+        line-height: 15px;
         display: flex;
         align-items: center;
         text-align: center;
@@ -49,7 +49,7 @@
 
     .container-escala {
         width: 602.9px;
-        height: 54.44px;
+        height: fit-content;
         align-items: center;
         display: flex;
         margin-left: 100px;
@@ -60,7 +60,7 @@
             flex-direction: column-reverse;
 
             .value-scale__radio-btn {
-                margin: 0 20px 0 30px;
+                margin: 0 20px 0 17px;
                 width: 10px;
                 height: 10px;
 
