--- a/src/app/modules/admin/containers/create-comparative-reports/create-comparative-reports.component.scss
+++ b/src/app/modules/admin/containers/create-comparative-reports/create-comparative-reports.component.scss
@@ -145,3 +145,27 @@
   margin-top: 200px;
   margin-bottom: 180px;
 }
+.select-item__option--all {
+  ::ng-deep mat-pseudo-checkbox {
+    display: none;
+  }
+}
+.select-item__option--all-selected {
+  background: white;
+}
+// .select-item__option--selected {
+//   background: white;
+//   ::ng-deep .mat-option-pseudo-checkbox {
+//     background-color: #1967d2;
+//   }
+//   ::ng-deep .mat-pseudo-checkbox::after {
+//     position: absolute;
+//     opacity: 0;
+//     content: "";
+//     border-bottom: 2px solid currentColor;
+//     transition: opacity 90ms cubic-bezier(0, 0, 0.2, 0.1);
+//   }
+//   ::ng-deep .mat-pseudo-checkbox {
+//     color: #0000008a;
+//   }
+// }
