Feat: bindea atributo nombre de reporte

--- a/src/app/modules/admin/containers/received-report/received-report.component.html
+++ b/src/app/modules/admin/containers/received-report/received-report.component.html
@@ -5,7 +5,7 @@
                 <img src="/assets/images/logo-MDP.png" alt="logo-MDP" style="width: 113px;
                 height: 49px;">
             </div>
-            <label class="label-repor-name">Reporte TARTAMUDO </label>
+            <label class="label-repor-name">Reporte {{report.nombre}} </label>
             <div class="periodo">
                 <p>Periodo</p>
                 <label>{{since}} A {{until}}</label>
