Feat: agrega nombre de reporte a observacion

--- a/src/app/modules/admin/containers/received-report/received-report.component.html
+++ b/src/app/modules/admin/containers/received-report/received-report.component.html
@@ -39,14 +39,14 @@
         <section>
             <div class="container-observ">
                 <p class="span-observ" style="font-weight: 600; margin-top: 52px;">Observaciones, comentarios sobre el
-                    reporte recibido C00010</p>
+                    reporte recibido {{report.nombre}}</p>
                 <span class="span-text"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error aspernatur unde
                     voluptate sed, corporis delectus eligendi ipsa in, temporibus sunt porro ratione, molestiae eos
                     vero? Corrupti neque assumenda nobis asperiores. </span>
             </div>
             <div class="container-observ">
                 <p class="span-observ" style="font-weight: 600; margin-top: 52px;">Observaciones, comentarios sobre el
-                    reporte recibido C00010</p>
+                    reporte recibido {{report.nombre}}</p>
                 <textarea class="text-observ" placeholder="Ingrese texto" type="text" [(ngModel)]="observ">{{observ}}</textarea>
             </div>
         </section>
