--- a/src/app/modules/admin/containers/create-comparative-reports/create-comparative-reports.component.scss
+++ b/src/app/modules/admin/containers/create-comparative-reports/create-comparative-reports.component.scss
@@ -138,7 +138,7 @@
 }
 ::ng-deep .mat-select-panel {
   background: #95b7ea;
-  margin-top: 40px;
+  max-height: 223px;
 }
 
 .select-item--variables {
