Feat: agrega routin a login y cambia atributo a mostrar en observaciones

--- a/src/app/modules/admin/containers/received-report/received-report.component.html
+++ b/src/app/modules/admin/containers/received-report/received-report.component.html
@@ -40,7 +40,7 @@
             <div class="container-observ">
                 <p class="span-observ" style="font-weight: 600; margin-top: 52px;">Observaciones, comentarios sobre el
                     reporte recibido {{report.nombre}}</p>
-                <span class="span-text" *ngFor="let item of comments"> {{item.observacion}} </span>
+                <span class="span-text"> {{report.observacion}} </span>
             </div>
             <div class="container-observ">
                 <p class="span-observ" style="font-weight: 600; margin-top: 52px;">Observaciones, comentarios sobre el
