--- a/src/app/modules/admin/containers/preview-report/preview-report.component.scss
+++ b/src/app/modules/admin/containers/preview-report/preview-report.component.scss
@@ -149,7 +149,7 @@
         align-items: flex-start;
         padding: 0px 12px;
         width: 794px;
-        height: 222px;
+        height: fit-content;
         margin-top: 12px;
 
         .ejes-preview {
