Refactor: Coloca acento en creacion

--- a/src/app/core/layouts/components/navbar/navbar.component.html
+++ b/src/app/core/layouts/components/navbar/navbar.component.html
@@ -106,7 +106,7 @@
         <!-- Creación de Reportes -->
         <li class="navbar__sub-item navbar__sub-item--create-reports">
           <a
-            routerLink="dashboard/reportes/creacion-de-reportes"
+            routerLink="dashboard/reportes/creación-de-reportes"
             class="navbar__sub-link"
             routerLinkActive="sub-activeRoute"
           >
