--- a/src/app/modules/admin/containers/reports/reports.component.html
+++ b/src/app/modules/admin/containers/reports/reports.component.html
@@ -42,7 +42,7 @@
         <!-- Position Column -->
         <div class="list-reports__row">
           <div class="list-reports__header">Numero</div>
-          <div class="list-reports__header">Fecha de creacion</div>
+          <div class="list-reports__header">Fecha de creación</div>
           <div class="list-reports__header list-reports__header--action">
             Acciones
           </div>
