Refactor: Coloca acento a número

--- a/src/app/modules/user/containers/pending-reports/pending-reports.component.html
+++ b/src/app/modules/user/containers/pending-reports/pending-reports.component.html
@@ -4,7 +4,7 @@
     <app-pop-up-no-exist *ngIf="flagNoPendingReport"></app-pop-up-no-exist>
     <div class="list" *ngIf="userPendingReports.length !== 0">
       <ul class="list__row-header">
-        <li class="list__header">Reporte Numero</li>
+        <li class="list__header">Reporte Número</li>
         <li class="list__header">Reporte asignado para centro</li>
         <li class="list__header">Periodo a Reportar</li>
         <li class="list__header">Fecha Limite de Entrega</li>
