Refactor: Comenta items notificaciones y Mis datos en navbar de usuario centro
Estas secciones probablemente no se realizaran en la app ya que no estan en el mvp pedido por la ong

--- a/src/app/core/layouts/components/user-navbar/user-navbar.component.html
+++ b/src/app/core/layouts/components/user-navbar/user-navbar.component.html
@@ -16,7 +16,7 @@
       </a>
     </li>
     <!-- Mis Datos -->
-    <li class="navbar__item">
+    <!-- <li class="navbar__item">
       <a
         routerLink="dashboard/mis-datos"
         class="navbar__link"
@@ -29,7 +29,7 @@
         />
         <span class="navbar__text-list">Mis Datos</span>
       </a>
-    </li>
+    </li> -->
 
     <!-- Mis Reportes -->
     <li class="navbar__item navbar__item--reports">
@@ -131,7 +131,7 @@
       </ul>
     </li>
     <!-- Notificaciones -->
-    <li class="navbar__item">
+    <!-- <li class="navbar__item">
       <a
         routerLink="dashboard/notificaciones"
         class="navbar__link"
@@ -144,7 +144,7 @@
         />
         <span class="navbar__text-list">Notificaciones</span>
       </a>
-    </li>
+    </li> -->
     <!-- Ayuda -->
     <li class="navbar__item">
       <a
